--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,8 @@
-src/ClimatologyConfigDialog.cpp
-src/ClimatologyConfigDialog.h
-src/ClimatologyDialog.cpp
-src/ClimatologyDialog.h
 src/ClimatologyOverlayFactory.cpp
-src/ClimatologyOverlayFactory.h
-src/ClimatologyUI.cpp
-src/ClimatologyUI.h
-src/IsoBarMap.cpp
-src/IsoBarMap.h
 src/climatology_pi.cpp
-src/climatology_pi.h
+src/ClimatologyUI.cpp
+src/ClimatologyDialog.cpp
+src/ClimatologyConfigDialog.cpp
+src/zuFile.cpp
+src/IsoBarMap.cpp
+src/icons.cpp
