Cloudsmith opencpn working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,13 +63,13 @@ set(OCPN_API_VERSION_MINOR "16")
 set(TP_COMMENT "  * Release for O5 using CI")
 
 set(PARENT "opencpn")
-#set(GIT_USER "seandepagnier")
-#set(GIT_USER "jongough")
-set(GIT_USER "rgleason")
 
-# The next line allows for setting up your own local webserver with git on it for testing purposes, the default is github.com
+#Used to set up a local webserver with git loaded, for testing purposes.
 set(GIT_REPOSITORY_SERVER "github.com")
-set(GIT_REPOSITORY_NAME "climatology_pi")
+
+#No longer needed, queried.
+#set(GIT_USER "rgleason")
+#set(GIT_REPOSITORY_NAME "climatology_pi")
 
 # Specifies Cloudsmith repository suffix
 set(PROD "prod")    #Standard Repos
@@ -78,10 +78,11 @@ set(ALPHA "alpha")  #Standard Repos
 
 #set(CLOUDSMITH_USER "jon-gough")
 #set(CLOUDSMITH_USER "sean-depagnier")								   
-set(CLOUDSMITH_USER "rick-gleason")
+set(CLOUDSMITH_USER "opencpn")
 
-#set(CLOUDSMITH_BASE_REPOSITORY "${GIT_REPOSITORY_NAME}")
-set(CLOUDSMITH_BASE_REPOSITORY "opencpn-plugins") #Rick's customization
+# Set if  Cloudsmith Base Repository name does not match your Git Repository name.
+# set(CLOUDSMITH_BASE_REPOSITORY "opencpn-plugins") #Rick's customization
+set(CLOUDSMITH_BASE_REPOSITORY "climatology") #without the pi
 
 # Set Plugin info-url, summary and description
 set(XML_INFO_URL "https://opencpn.org/OpenCPN/plugins/climatology.html")
