--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,19 @@
-version: 0.9.{build}
-clone_folder: c:\project\climatology_pi
-#shallow_clone: true
+clone_folder: c:\project\ocpn_project
+shallow_clone: false
+clone_depth: 10
+
 image:
 - Visual Studio 2017
 
-platform: 
+platform:
 # - x64
-- Win32
+  - Win32
 
 configuration: Release
 test: OFF
+
+environment:
+  OCPN_TARGET: MSVC
 
 install:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
@@ -18,11 +22,12 @@ install:
   - set WXWIN=C:\wxWidgets-3.1.2
   - set wxWidgets_ROOT_DIR=%WXWIN%
   - set wxWidgets_LIB_DIR=%WXWIN%\lib\vc_dll
-  - cmd: SET PATH=%PATH%;%WXWIN%;%wxWidgets_LIB_DIR%;C:\Program Files (x86)\Poedit\Gettexttools\bin;
+  - cmd: SET PATH=%PATH%;%WXWIN%;%wxWidgets_LIB_DIR%;C:\Program Files (x86)\Poedit\Gettexttools\bin
 
   # install dependencies:
   - choco install poedit
-  
+  - choco install git
+
   - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/nsis-3.04-setup.exe
   - cmd: nsis-3.04-setup.exe /S
 
@@ -30,34 +35,41 @@ install:
   - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/wxWidgets-3.1.2.7z
   - cmd: 7z x wxWidgets-3.1.2.7z -o%WXWIN% > null
 
-   #- set #Use only while debugging - it reveals the deploy token set on Appveyor
+  - set
 
 before_build:
-  - cd c:\project\climatology_pi
-  - git submodule update --init --recursive
-  - mkdir build
-  - cd build
+  - cd c:\project\ocpn_project
+  - cd buildwin
+  - ps: Start-FileDownload https://downloads.sourceforge.net/project/opencpnplugins/opencpn_packaging_data/PVW32Con.exe
+  - cd ..
+  - rm -rf build && mkdir build && cd build
   - ps: Start-FileDownload https://downloads.sourceforge.net/project/opencpnplugins/opencpn_lib/4.99.1405-vc141_xp/opencpn.lib
   - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/OpenCPN_buildwin-4.99a.7z
-  - cmd: 7z x -y OpenCPN_buildwin-4.99a.7z -oc:\project\climatology_pi\buildwin
+  - cmd: 7z x -y OpenCPN_buildwin-4.99a.7z -oc:\project\ocpn_project\buildwin
   - cmake -T v141_xp ..
- 
+
 build_script:
-  #- cmake --build . --config debug
-  - cmake --build . --target package --config release
+  - cmake --build . --target package --config Release
+  - python -m ensurepip
+  - python -m pip install -q setuptools
+  - python -m pip install -q cloudsmith-cli
+  - bash ../build/cloudsmith-upload.sh
 
 artifacts:
-  - path: 'build\climatology_pi*.exe'
+  - path: 'build\*.exe'
     name: installer
 
-deploy:
-  description: 'release created by AppVeyor CI'
-  provider: GitHub
-  auth_token: #'%GitHub_auth_token%'
+# Removed from process as not providing real benefit at the moment
+#deploy:
+#  description: 'release created by AppVeyor CI'
+#  provider: GitHub
+#  #auth_token: '%GitHub_auth_token%'
+#  auth_token: '%GIT-PTOKEN-testplugin_pi-INTO-APPVEYOR%'
+#    secure: A7rMxzUbQoDkwCjKK/EuiN86GuwtObhIhdyg2cR0AJHogoIn2wepvUgrI4Pmd9It
+#  artifact: installer,portable
+#  draft: true
+#  prerelease: true
+#  on:
+#    appveyor_repo_tag: true # deploy on tag push only
+#    configuration: Release  # Debug contains non-redist MS DLLs
     secure: A7rMxzUbQoDkwCjKK/EuiN86GuwtObhIhdyg2cR0AJHogoIn2wepvUgrI4Pmd9It
-  artifact: installer,portable
-  draft: true
-  prerelease: true
-  on:
-    appveyor_repo_tag: true # deploy on tag push only
-    configuration: Release  # Debug contains non-redist MS DLLs
