--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,10 @@
-src/ClimatologyConfigDialog.cpp
-src/ClimatologyConfigDialog.h
-src/ClimatologyDialog.cpp
-src/ClimatologyDialog.h
-src/ClimatologyOverlayFactory.cpp
-src/ClimatologyOverlayFactory.h
-src/ClimatologyUI.cpp
-src/ClimatologyUI.h
-src/IsoBarMap.cpp
-src/IsoBarMap.h
-src/climatology_pi.cpp
 src/climatology_pi.h
+src/ClimatologyConfigDialog.h
+src/ClimatologyDialog.h
+src/ClimatologyOverlayFactory.h
+src/ClimatologyUI.h
+src/gldefs.h
+src/icons.h
+src/IsoBarMap.h
+src/linmath.h
+src/zuFile.h
