CMakeLists.txt added include GL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,8 +228,8 @@ SET(LIBHDRS
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/plugingl)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/tinyxml)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/jsoncpp)
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/jsoncpp/json)
-#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include/GL)
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/src/jsoncpp/json)
+include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include/GL)
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/api-16)
 #INCLUDE_DIRECTORIES(api-16)
 
