--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ endif(COMMAND cmake_policy)
 
 # define plugin name, owner and versions
 set(VERBOSE_NAME Climatology)
-set(COMMON_NAME "climatology")
+set(COMMON_NAME "Climatology")
 set(TITLE_NAME "climatology")
 set(PACKAGE_CONTACT "Sean D'Epagnier ")
 set(PACKAGE "climatology")
@@ -51,9 +51,9 @@ set(LONG_DESCRIPTION "Climatology PlugIn for OpenCPN")
 
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "4")
-set(VERSION_PATCH "5")
+set(VERSION_PATCH "7")
 set(VERSION_TWEAK "0")
-set(VERSION_DATE "07/20/2020")
+set(VERSION_DATE "07/21/2020")
 set(OCPN_MIN_VERSION "ov50")
 set(OCPN_API_VERSION_MAJOR "1")
 set(OCPN_API_VERSION_MINOR "16")
