--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set(LONG_DESCRIPTION "Climatology provides overlay capabilities for historic wea
 
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "4")
-set(VERSION_PATCH "8")
+set(VERSION_PATCH "9")
 set(VERSION_TWEAK "0")
 set(VERSION_DATE "07/21/2020")
 set(OCPN_MIN_VERSION "ov50")
@@ -64,8 +64,8 @@ set(PARENT "opencpn")
 set(GIT_REPOSITORY_SERVER "github.com")
 
 #No longer needed, queried.
-#set(GIT_USER "rgleason")
-#set(GIT_REPOSITORY_NAME "weather_routing_pi"
+set(GIT_USER "rgleason")
+set(GIT_REPOSITORY_NAME "climatology_pi"
 
 # Specifies cloudsmith repository sufficies
 set(PROD "prod") # Standard Repos
