Make sure github.com is set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ set(OCPN_API_VERSION_MINOR "16")
 
 set(PARENT "opencpn")
 
-# Used to set up a local webserver with git loaded, for testing purposes.
-# set(GIT_REPOSITORY_SERVER "github.com")
+# The next line allows for setting up your own local webserver with git on it for testing purposes, the default is github.com
+set(GIT_REPOSITORY_SERVER "github.com")
 
 #No longer needed, queried.
 #set(GIT_USER "rgleason")
